--- a/templates/despesas.html
+++ b/templates/despesas.html
@@ -107,9 +107,11 @@
                                   
                                   <option value="1">Passeio</option>
                                   <option value="2">Conta de água</option>
-                                  <option value="3">Conta de luz</option>
-                                  <option value="4">Internet</option>
-                                  <option value="5">Feira do mês</option>
+                                  <option value="3">Transporte</option>
+                                  <option value="4">Outros</option>
+                                  <option value="5">Conta de luz</option>
+                                  <option value="5">Mercado</option>
+                                  <option value="5">Internet</option>
                                   
                                   
                                 </select>
