--- a/templates/despesas.html
+++ b/templates/despesas.html
@@ -58,11 +58,7 @@
           <li>
           <a href="{{url_for('despesas')}}"><img src="" />&nbsp;Despesas</a>
         </li>
-          <li>
-            <a href="{{url_for('saldo')}}"
-              ><img src="img/person-fill.svg" />&nbsp;Poupança</a
-            >
-          </li>
+          
           <li>
             <a href="#"><img src="img/person-fill.svg" />&nbsp;Minha conta</a>
           </li>
@@ -110,8 +106,8 @@
                                   <option value="3">Transporte</option>
                                   <option value="4">Outros</option>
                                   <option value="5">Conta de luz</option>
-                                  <option value="5">Mercado</option>
-                                  <option value="5">Internet</option>
+                                  <option value="6">Alimentação</option>
+                                  <option value="7">Internet</option>
                                   
                                   
                                 </select>
