--- a/templates/transacoes.html
+++ b/templates/transacoes.html
@@ -51,11 +51,7 @@
         <li>
           <a href="{{url_for('despesas')}}"><img src="" />&nbsp;Despesas</a>
         </li>
-        <li>
-          <a href="{{url_for('saldo')}}"
-            ><img src="img/person-fill.svg" />&nbsp;Inserir Saldo</a
-          >
-        </li>
+        
         <li>
           <a href="#"><img src="img/person-fill.svg" />&nbsp;Minha conta</a>
         </li>
@@ -85,7 +81,7 @@
                         </div>
                         <div class="row justify-content-between text-left">
                             <div class="form-group col-sm-12 flex-column d-flex"> 
-                                <label class="form-control-label px-3">Categoria<span class="text-danger"> *</span></label> 
+                                <label class="form-control-label px-3">Categoria</label> 
                                 <input type="text" list="opcoes"id="categoria" name="categoria" placeholder="Categoria" > </div>
                                  <datalist id="opcoes" >
                                     <option>Compras</option>
