--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -71,6 +71,7 @@
 
           <div class="user">
             <!--<img src="img/notifications.png" />-->
+            
             <div class="img-case" id="sair">
               <a href="{{url_for('login')}}" class="btn"
                 ><span>Entrar</span>
@@ -140,22 +141,31 @@
         <div class="content-2">
           <div class="recent-payments">
             <div class="title">
-              <h2 class="preto">Poupança</h2>
+              <h2 class="preto">Despesas</h2>
               <a href="#" class="btn">View All</a>
             </div>
             <table>
-              <tr>
-                <th>teste</th>
-                <th>teste</th>
-                <th>teste</th>
-                <th>Ação</th>
-              </tr>
-              <tr>
-                <td>xxx</td>
-                <td>xxx</td>
-                <td>xxx</td>
-                <td><a href="#" class="btn">Excluir</a></td>
-              </tr>
+              <thead>
+                <tr>
+                  <th>Id</th>
+                  <th>Valor</th>
+                  <th>Data de vencimento</th>
+                  <th>Tipo</th>
+                  <th>Ação</th>
+                </tr>
+              </thead>
+              <tbody>
+                {{% for despesa in despesas %}}
+                <tr>
+                  <td>{{% despesa._id %}}</td>
+                  <td>{{% despesa._valor %}}</td>
+                  <td>{{% despesa._data %}}</td>
+                  <td>{{% despesa._tipo % }</td>
+                  <td><a href="#" class="btn"><img src="img/trash.svg" /></a>&nbsp;<a href="#" class="btn"><img src="img/pencil-square.svg" /></a></td>
+                </tr>
+                {{%endfor%}}
+              </tbody>
+              
             </table>
           </div>
           <div class="new-students">
