--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -161,7 +161,7 @@
                   <td>{{ despesa._valor }}</td>
                   <td>{{ despesa._data }}</td>
                   <td>{{ despesa._tipo  }}</td>
-                  <td><a href="#" class="btn"><img src="img/trash.svg" /></a>&nbsp;<a href="#" class="btn"><img src="img/pencil-square.svg" /></a></td>
+                  <td><a href="{{url_for('deletar', id= despesa._id)}}" class="btn"><img src="img/trash.svg" /></a>&nbsp;<a href="#" class="btn"><img src="img/pencil-square.svg" /></a></td>
                 </tr>
                 {%endfor%}
               </tbody>
