--- a/templates/editarDespesas.html
+++ b/templates/editarDespesas.html
@@ -95,11 +95,12 @@
                       {% endwith %}
                       <h2 class="text-center mb-2 preto">{{ titulo }}</h2>
                       <form class="form-card" method="POST" action="/editarDespesas" >
+                        <input type="hidden" name="id" value="{{despesa._id}}" />
                           <div class="row justify-content-between text-left">
                             <div class="form-group col-sm-6 flex-column d-flex">
                                  <label  class="form-control-label px-3">Tipo<span class="text-danger"> *</span></label>
                                   <!-- <input list="x" type="text" id="tipo" name="tipo"  placeholder="Fixa ou Extra"> -->
-                                <select  id="tipo" name="tipo" style="height: 45px">
+                                <select  id="tipo" name="tipo" style="height: 45px" value="{{despesa._valor}}">
                                   
                                   <option value="1">Passeio</option>
                                   <option value="2">Conta de água</option>
@@ -115,12 +116,12 @@
 
                             <div class="form-group col-sm-6 flex-column d-flex"> 
                                 <label class="form-control-label px-3">Valor<span class="text-danger"> *</span></label> 
-                                <input type="text" id="valor" name="valor"  placeholder="Digite um valor"> </div>
+                                <input type="text" id="valor" name="valor"  placeholder="Digite um valor" value="{{despesa._valor}}"> </div>
                         </div>
                         
                         <div class="form-group col-sm-6 flex-column d-flex"> 
                                 <label class="form-control-label px-3">Data de pagamento<span class="text-danger"> *</span></label> 
-                                <input type="date" id="data" name="data"  placeholder="Data de pagamento"> </div>
+                                <input type="date" id="data" name="data"  placeholder="Data de pagamento" value="{{despesa._data}}"> </div>
                          <div class="row justify-content-between text-left">
                             
                                 <div class="form-group col-sm-6 flex-column d-flex">
