--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -47,7 +47,7 @@
         <li>
           <a href="{{url_for('despesas')}}"><img src="" />&nbsp;Despesas</a>
         </li>
-        
+
         <li>
           <a href="#"><img src="img/person-fill.svg" />&nbsp;Minha conta</a>
         </li>
@@ -71,7 +71,7 @@
 
           <div class="user">
             <!--<img src="img/notifications.png" />-->
-            
+
             <div class="img-case" id="sair">
               <a href="{{url_for('login')}}" class="btn"
                 ><span>Entrar</span>
@@ -103,8 +103,8 @@
         <div class="cards">
           <div class="card">
             <div class="box">
-              <h1 class="preto">214944</h1>
-              <h3>Poupança</h3>
+              <h1 class="preto">R$ 100,00</h1>
+              <h3>Saldo</h3>
             </div>
             <div class="icon-case">
               <img src="students.png" />
@@ -160,12 +160,29 @@
                   <td>{{ despesa._id }}</td>
                   <td>{{ despesa._valor }}</td>
                   <td>{{ despesa._data }}</td>
-                  <td>{{ despesa._tipo  }}</td>
-                  <td><a href="{{url_for('deletar', id= despesa._id)}}" class="btn"><img src="img/trash.svg" /></a>&nbsp;<a href="{{url_for('editar', id= despesa._id)}}" class="btn"><img src="img/pencil-square.svg" /></a></td>
+                  <td>{{ despesa._tipo }}</td>
+                  <td>
+                    <a
+                      href="{{url_for('deletar', id= despesa._id)}}"
+                      class="btn btn-danger"
+                      ><img
+                        src="img/trash.svg"
+                        data-bs-toggle="tooltip"
+                        data-bs-placement="bottom"
+                        title="Excluir" /></a
+                    >&nbsp;&nbsp;&nbsp;<a
+                      href="{{url_for('editar', id= despesa._id)}}"
+                      class="btn btn-info"
+                      ><img
+                        src="img/pencil-square.svg"
+                        data-bs-toggle="tooltip"
+                        data-bs-placement="bottom"
+                        title="Editar "
+                    /></a>
+                  </td>
                 </tr>
                 {%endfor%}
               </tbody>
-              
             </table>
           </div>
           <div class="new-students">
