--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -107,7 +107,7 @@
               <h3>Saldo</h3>
             </div>
             <div class="icon-case">
-              <img src="students.png" />
+              <img src="img/cash.svg" />
             </div>
           </div>
           <div class="card">
