--- a/templates/editarDespesas.html
+++ b/templates/editarDespesas.html
@@ -102,7 +102,7 @@
                                  <label  class="form-control-label px-3">Tipo<span class="text-danger"> *</span></label>
                                   <!-- <input list="x" type="text" id="tipo" name="tipo"  placeholder="Fixa ou Extra"> -->
                                 <select  id="tipo" name="tipo" style="height: 45px" value="{{despesas._tipo}}">
-                                  
+                                  <option >-- --</option>
                                   <option value="1">Passeio</option>
                                   <option value="2">Conta de água</option>
                                   <option value="3">Transporte</option>
