--- a/templates/transacoes.html
+++ b/templates/transacoes.html
@@ -72,7 +72,7 @@
                   <!-- {% if sucesso %}
                         <p class=error><strong>Error: </strong> {{ sucesso }}
                     {% endif %} -->
-                    <h2 class="preto">Faça sua transação</h2>
+                    <h2 class="preto">{{titulo}}</h2>
                     
                     <form class="form-card" >
                         <div class="row justify-content-between text-left">
