--- a/templates/transacoes.html
+++ b/templates/transacoes.html
@@ -80,7 +80,7 @@
                             <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Valor<span class="text-danger"> *</span></label> <input type="number" id="valor" name="lname" placeholder="Valor"> </div>
                         </div>
                         <div class="row justify-content-between text-left">
-                            <div class="form-group col-sm-12 flex-column d-flex"> 
+                            <div class="form-group col-sm-6 flex-column d-flex"> 
                                 <label class="form-control-label px-3">Categoria</label> 
                                 <input type="text" list="opcoes"id="categoria" name="categoria" placeholder="Categoria" > </div>
                                  <datalist id="opcoes" >
@@ -91,29 +91,31 @@
                                     <option>Lazer</option>
                                     <option>Estudo</option>
                                     </datalist>
-                            
+                                    <div class="form-group col-sm-6 flex-column d-flex"> 
+                                      <div class="form-group col-sm-5 flex-column d-flex"> 
+                                        <label class="form-control-label px-3">Data</label> 
+                                        <input type="date" id="data-transacao" name="data-transacao" placeholder="data de hoje"> </div>
+                                        
+                                    </div>
+                                    
                         </div>
-                        <div class="row justify-content-between text-left">
-                            <div class="form-group col-sm-6 flex-column d-flex"> 
-                               <button class="btn btn-green">
-                                <i class="bi bi-arrow-up"></i>Entrada
-                               </button>
-                              </div>
-                              <div class="form-group col-sm-6 flex-column d-flex"> 
+                        <div class="row justify-content-between text-left">                        
+                              <div class="form-group col-sm-4 flex-column d-flex"> 
                                    <button class="btn btn-red">
                                     <i class="bi bi-arrow-down"></i> Saida
                                 </button>
                                </div>
-                               <div class="form-group col-sm-6 flex-column d-flex"> 
+                               <div class="form-group col-sm-4 flex-column d-flex"> 
+                                <button class="btn btn-green">
+                                 <i class="bi bi-arrow-up"></i>Entrada
+                                </button>
+                               </div>
+                               <div class="form-group col-sm-4 flex-column d-flex"> 
                                 <button class="btn btn-red">
                                  <i class="bi bi-x"></i>Cancelar
                                 </button>
                                </div>
-                               <div class="form-group col-sm-6 flex-column d-flex"> 
-                                    <button class="btn btn-green">
-                                     <i class="bi bi-check"></i> Criar
-                                 </button>
-                                </div>
+                               
                                              </form>
                 </div>
             </div>
