modificação no template de transações

--- a/templates/transacoes.html
+++ b/templates/transacoes.html
@@ -91,11 +91,17 @@
                                     <option>Lazer</option>
                                     <option>Estudo</option>
                                     </datalist>
-                                    <div class="form-group col-sm-6 flex-column d-flex"> 
-                                      <div class="form-group col-sm-5 flex-column d-flex"> 
+                                    <div class="form-group col-sm-3 flex-column d-flex">                               
+                                      <label class="form-control-label px-3">Tipo de renda</label> 
+                                      <select  id="tipo" name="tipo" style="height: 45px">
+                                        <option value="1">Fixa</option>
+                                        <option value="2">Extra</option>    
+                                      </select>
+                                  </div>
+
+                                    <div class="form-group col-sm-3 flex-column d-flex">                               
                                         <label class="form-control-label px-3">Data</label> 
-                                        <input type="date" id="data-transacao" name="data-transacao" placeholder="data de hoje"> </div>
-                                        
+                                        <input type="date" id="data-transacao" name="data-transacao" placeholder="data de hoje">                                       
                                     </div>
                                     
                         </div>
