--- a/static/login.css
+++ b/static/login.css
@@ -1,112 +1,113 @@
-body,
-html {
-  height: 100%;
-  font-family: "arial";
-  background-repeat: no-repeat;
-  background-image: linear-gradient(#041e42, #87ceeb);
+*{
+    box-sizing: border-box;
+}
+body{
+    margin: 0;
 }
 
-.card-container.card {
-  top: 100px;
-  max-width: 400px;
-  padding: 40px 40px;
+body{
+    background-color: #5E807F;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
-.btn {
-  font-weight: 700;
-  height: 36px;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  user-select: none;
-  cursor: default;
+#profile-img{
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
 }
 
-/*
-   * Card component
-   */
-.card {
-  background-color: #f7f7f7;
-  /* just in case there no content*/
-  padding: 20px 25px 30px;
-  margin: 0 auto 25px;
-  margin-top: 50px;
-  /* shadows and rounded borders */
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  border-radius: 2px;
-  -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+
+.container{
+    display: flex;
+    flex-flow: column wrap;
+    height: 1200px;
+    background-color: #C4C4C4;
+    margin-left: 30%;
+    margin-right: 30%;
+    flex: 40%;
+    border-left: 25px solid #406564;
+    border-right: 25px solid #406564;
+    align-items: center;
+    padding: 35px 40px 35px 40px;
 }
 
-.card h3 {
-  margin: 1rem;
-  font-weight: bold;
+.form-signin{
+    margin-top: 30px;
+    width: 400px;
+    text-align: center;
+    justify-content: center;
 }
 
-.profile-img-card {
-  top: 10px;
-  width: 96px;
-  height: 96px;
-  margin: 0 auto 10px;
-  display: block;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
+.btn{
+    font-size: 30px;
+    background-color: #406564;
+    padding: 15px 25px 15px 25px;
+    border-radius: 50px;
+    border: none;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
 }
 
-/*
-   * Form styles
-   */
-.profile-name-card {
-  font-size: 16px;
-  font-weight: bold;
-  text-align: center;
-  margin: 10px 0 0;
-  min-height: 1em;
+.btn:hover{
+    background-color: white;
+    border: none;
+    color: #406564;
+    cursor: pointer;
 }
 
-.reauth-email {
-  display: block;
-  color: #404040;
-  line-height: 2;
-  margin-bottom: 10px;
-  font-size: 14px;
-  text-align: center;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+#sombra3{
+    color: #406564;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 20px;
+    padding: 5px 10px 5px 10px;
+}
+#sombra3:hover{
+    color: white;
+    background-color: #406564;
+    border-radius: 20px;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 20px;
+    padding: 5px 10px 5px 10px;
 }
 
-.form-signin #inputEmail,
-.form-signin #inputPassword {
-  direction: ltr;
-  height: 44px;
-  font-size: 16px;
+#inputEmail{
+    font-size: 30px;
+    text-align: center;
+    border-radius: 10px;
+    border: none;
+    color: #406564;
+    padding: 5px;
 }
 
-.form-signin input[type="email"],
-.form-signin input[type="password"],
-.form-signin input[type="text"],
-.form-signin button,
-.form-signin .form-control input[type="text"],
-#form-container .form-control {
-  border: none;
-  border-bottom: 1px solid #ccc;
-  border-radius: 1;
-  width: 100%;
-  display: block;
-  margin-bottom: 10px;
-  z-index: 1;
-  position: relative;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+#inputPassword{
+    text-align: center;
+    color: #406564;
+    font-size: 30px;
+    border-radius: 10px;
+    margin-top: 20px;
+    border: none;
+    padding: 5px;
 }
 
-.oculto {
-  display: none;
+h3{
+    font-size: 30px;
+    color: #406564;
 }
+
+@media screen and (max-width: 1350px){
+    body{
+        background-color: #C4C4C4;
+    }
+    .container{
+        background-color: #C4C4C4;
+        border-left: 0px solid #C4C4C4;
+        border-right: 0px solid #C4C4C4;
+
+    }
+}
+
