--- a/static/novo-cadastro.css
+++ b/static/novo-cadastro.css
@@ -1,65 +1,19 @@
-/*Novo Cadastro*/
-
-#form-container {
-  background-color: #fff;
-  border-radius: none;
-  box-shadow: 0.5px 10px 15px rgba(0, 0, 0, 0.2);
-  margin: 25px auto;
-  padding: 25px;
+*{
+    box-sizing: border-box;
+}
+body{
+    margin: 0;
 }
 
-@media (min-width: 768px) {
-  #form-container {
-    margin: 50px auto;
-    padding: 30px;
-  }
+body{
+    background-color: #406564;
 }
 
-#form-container h3 {
-  font-weight: 900;
-  margin-bottom: 30px;
-}
-
-#form-container form {
-  padding-bottom: 10px;
-}
-
-#form-container .form-control:focus {
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-}
-
-#form-container .form-floating label {
-  color: rgb(204, 204, 204);
-}
-
-#form-container .form-floating > .form-control:focus ~ label {
-  color: #222;
-}
-
-/*-------------*/
-/*imagem */
-.row.align-items-center {
-  align-content: center;
-  height: 100%;
-}
-
-#link-container {
-  text-align: center;
-  padding-top: 50px;
-}
-
-#sombra:hover,
-#sombra2:hover,
-#sombra3:hover {
-  background-color: #fff;
-}
-
-#sombra3:hover,
-#sombra3:active,
-#sombra3:focus {
-  color: rgb(12, 97, 33);
-}
-#sombra3 {
-  text-decoration: none;
-  color: rgb(104, 145, 162);
+.container{
+    height: 400px;
+    width: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
 }
