--- a/templates/Novo_Cadastro.html
+++ b/templates/Novo_Cadastro.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Não possuo cadastro</title>
+    <link
+    rel="stylesheet"
+    href="{{ url_for('static', filename='novo-cadastro.css') }}"
+  />
+    
 
-    <!-- CSS only -->
+    <!-- CSS only
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <!--<link rel="stylesheet" href="static/style.css" />-->
+    <link rel="stylesheet" href="static/style.css" />
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='novo-cadastro.css') }}"
@@ -28,7 +33,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"
     />
 
-    <!-- JavaScript Bundle with Popper -->
+    JavaScript Bundle with Popper
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -37,11 +42,11 @@
     <script src="{{ url_for('static', filename='jquery-3.6.0.js') }}"></script>
     <script src="{{ url_for('static', filename='jquery.validate.min.js') }}"></script>
     <script src="{{ url_for('static', filename='localization/messages_pt_BR.js') }}"></script>
-    <script src="{{ url_for('static', filename='teste.js') }}"></script>
+    <script src="{{ url_for('static', filename='teste.js') }}"></script> -->
   </head>
 
   <body>
-    <div class="side-menu">
+    <!-- <div class="side-menu">
       <div class="brand-name">
         <h1>Finanças S.A</h1>
       </div>
@@ -69,9 +74,9 @@
           >
         </li>
       </ul>
-    </div>
+    </div> -->
 
-    <div class="container col-md-6 jx" id="form-container">
+    <div class="container" id="form-container">
       <div class="row">
         <div class="col-md-6">
           <h3>Faça seu cadastro</h3>
