--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -1,8 +1,14 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+*{
+    box-sizing: border-box;
+}
+body{
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    background-color: #5E807F;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 body {
@@ -14,8 +20,7 @@ a {
 li {
   list-style: none;
 }
-h1,
-h2 {
+h1, h2 {
   color: #fff;
 }
 .preto {
@@ -27,32 +32,38 @@ h3 {
 }
 
 .btn {
-  background: #041e42;
-  color: #fff;
-  padding: 5px 10px;
+  background: #335251;
+  font-size: 20px;
+  color: white;
+  padding: 10px;
   text-align: center;
-  border-radius: 15px;
+  border-radius: 30px;
 }
-.btn-red {
-  color: #fff;
-  padding: 5px 10px;
-  text-align: center;
-  border-radius: 15px;
-  background: #a51b0b;
-}
-.btn-green {
-  color: #fff;
-  padding: 5px 10px;
-  text-align: center;
-  border-radius: 15px;
-  background: #228b22;
-}
-
 .btn:hover {
   color: black;
   background: #fff;
-  padding: 3px 8px;
   border: 2px solid #041e42;
+
+}
+.btn-red {
+  padding: 10px 10px;
+  text-align: center;
+  border-radius: 15px;
+  background-color: #a51b0b;
+}
+.btn-red:hover {
+  background-color: white;
+  border: 1px solid black;
+}
+.btn-green {
+  padding: 10px 10px;
+  text-align: center;
+  border-radius: 15px;
+  background-color: #228b22;
+}
+.btn-green:hover {
+  background-color: white;
+  border: 1px solid black;
 }
 
 .title {
@@ -69,16 +80,18 @@ table {
 th,
 td {
   text-align: left;
-  padding: 8px;
+  padding-top: 15px;
 }
 
 .side-menu {
   position: fixed;
-  background: #105169;
-  width: 20vw;
-  min-height: 100vh;
+  background: #335251;
+  width: 25vw;
+  min-height: 100vw;
   display: flex;
-  flex-direction: column;
+  flex-flow: column wrap;
+  text-align:left;
+  z-index: 999;
 }
 
 .side-menu .brand-name {
@@ -89,11 +102,13 @@ td {
 }
 
 .side-menu li a {
+
   font-size: 24px;
-  padding: 10px 40px;
   color: #fff;
   display: flex;
-  align-items: center;
+  align-items:flex-start;
+  padding-top: 15px;
+
 }
 
 .side-menu li a:hover {
@@ -104,9 +119,9 @@ td {
 .container {
   position: absolute;
   right: 0;
-  width: 80vw;
+  width: 75vw;
   height: 100vh;
-  background: #f1f1f1;
+  background: #c4c4c4;
 }
 .container .jx {
   position: absolute;
@@ -198,17 +213,16 @@ td {
   background: #f1f1f1;
 }
 .container .content .cards {
-  padding: 20px 15px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 .container .content .cards .card {
-  width: 250px;
-  height: 150px;
+  width: 20%;
+  height: 20%;
   background-color: #fff;
-  margin: 20px 10px;
+  margin: 20px 20px;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -223,30 +237,30 @@ td {
   flex-wrap: wrap;
 }
 .container .content .content-2 .recent-payments {
-  min-height: 50vh;
-  flex: 5;
+  min-height: 60vh;
+  flex: 4;
   background: #fff;
-  margin: 0 25px 25px 25px;
+  margin: 0 20px 20px 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   display: flex;
   flex-direction: column;
 }
 
 .container .content .content-2 .new-students {
-  flex: 2;
+  flex: 3;
   background: #fff;
-  min-height: 50vh;
-  margin: 0 25px;
+  min-height: 60vh;
+  margin: 0 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   display: flex;
   flex-direction: column;
 }
 
-@media screen and (min-width: 1050px) {
+/* @media screen and (min-width: 1050px) {
   .side-menu li {
     font-size: 18px;
   }
-}
+} */
 
 /*@media screen and (min-width: 940px) {
   .side-menu li span {
