--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -11,16 +11,9 @@
       href="{{ url_for('static', filename='dashboard.css') }}"
     />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
     <script src="{{ url_for('static', filename='jquery-3.6.0.js') }}"></script>
     <script src="{{ url_for('static', filename='teste.js') }}"></script>
 
-    <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -33,7 +26,7 @@
       <div class="brand-name">
         <h1>Finanças S.A</h1>
       </div>
-      <ul>
+      <ul class="ul">
         <li>
           <a href="{{ url_for('index')}}"
             ><img src="img/house-door-fill.svg" />&nbsp;Inicio</a
@@ -72,11 +65,9 @@
           <div class="user">
             <!--<img src="img/notifications.png" />-->
 
-            <div class="img-case" id="sair">
               <a href="{{url_for('login')}}" class="btn"
                 ><span>Entrar</span>
               </a>
-            </div>
           </div>
         </div>
       </div>
@@ -103,7 +94,7 @@
         <div class="cards">
           <div class="card">
             <div class="box">
-              <h1 class="preto">R$ 100,00</h1>
+              <h1 class="preto">R$ 000,00</h1>
               <h3>Saldo</h3>
             </div>
             <div class="icon-case">
@@ -112,7 +103,7 @@
           </div>
           <div class="card">
             <div class="box">
-              <h1 class="preto">214900</h1>
+              <h1 class="preto">N/A</h1>
               <h3>Transações</h3>
             </div>
             <div class="icon-case">
@@ -121,7 +112,7 @@
           </div>
           <div class="card">
             <div class="box">
-              <h1 class="preto">2149</h1>
+              <h1 class="preto">N/A</h1>
               <h3>estudantes</h3>
             </div>
             <div class="icon-case">
@@ -130,7 +121,7 @@
           </div>
           <div class="card">
             <div class="box">
-              <h1 class="preto">2149</h1>
+              <h1 class="preto">N/A</h1>
               <h3>estudantes</h3>
             </div>
             <div class="icon-case">
@@ -164,16 +155,16 @@
                   <td>
                     <a
                       href="{{url_for('deletar', id= despesa._id)}}"
-                      class="btn btn-danger"
-                      ><img
+                      class="btn-red"
+                      ><img class="img-red"
                         src="img/trash.svg"
                         data-bs-toggle="tooltip"
                         data-bs-placement="bottom"
                         title="Excluir" /></a
                     >&nbsp;&nbsp;&nbsp;<a
                       href="{{url_for('editar', id= despesa._id)}}"
-                      class="btn btn-info"
-                      ><img
+                      class="btn-green"
+                      ><img class="img-green"
                         src="img/pencil-square.svg"
                         data-bs-toggle="tooltip"
                         data-bs-placement="bottom"
@@ -188,19 +179,19 @@
           </div>
           <div class="new-students">
             <div class="title">
-              <h2 class="preto">Últimas transações</h2>
+              <h2 class="preto">transações</h2>
               <a href="#" class="btn">View All</a>
             </div>
             <table>
               <tr>
-                <th>111</th>
-                <th>111</th>
-                <th>111</th>
+                <th>a deinir</th>
+                <th>a deinir</th>
+                <th>a deinir</th>
               </tr>
               <tr>
-                <td>sefdsafdased</td>
-                <td>sefdsafdased</td>
-                <td>sefdsafdased</td>
+                <td>N/A</td>
+                <td>N/A</td>
+                <td>N/A</td>
               </tr>
             </table>
           </div>
