--- a/static/transacao.css
+++ b/static/transacao.css
@@ -17,9 +17,9 @@ body {
 
 .card {
   padding: 30px 40px;
-  margin-top: 100px;
-  margin-bottom: 60px;
-  background: #fff;
+  margin: 100px, 0px 100px 0px;
+
+  background: #c4c4c4 !important;
   color: #000;
   border: none !important;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -78,4 +78,28 @@ button:focus {
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
   outline-width: 0;
+}
+
+.container-fluid.px-1.py-5.mx-auto{
+  position: fixed;
+  background: #5E807F;
+  width: 75vw;
+  min-height: 100vw;
+  display: flex;
+  flex-flow: row wrap;
+  text-align:right;
+}
+
+.row.d-flex.justify-content-center{
+  position: fixed;
+  background: #5E807F;
+  width: 75vw;
+  min-height: 100vw;
+  margin-left: 25vw;
+}
+
+.col-xl-7.col-lg-8.col-md-9.col-11.text-center{
+  margin: 200px 200px 0px 200px;
+  width: 1000px;
+  height: 400px;
 }
