--- a/templates/despesas.html
+++ b/templates/despesas.html
@@ -10,35 +10,19 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='dashboard.css') }}"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"
-    />
+
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='transacao.css') }}"
     />
 
-    <link
+   <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    
-    <script src="{{ url_for('static', filename='jquery-3.6.0.js') }}"></script>
-    <script src="{{ url_for('static', filename='teste.js') }}"></script>
 
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <script src="{{ url_for('static', filename='jquery-3.6.0.js') }}"></script>
-    <script src="{{ url_for('static', filename='jquery.mask.js') }}"></script>
-    <script src="{{ url_for('static', filename='teste.js') }}"></script>
-    
 </head>
 <body>
     <div class="side-menu">
@@ -71,7 +55,7 @@
         </ul>
       </div>
   
-      <div class="container-fluid px-1 py-5 mx-auto">
+      <div class="container-fluid.px-1.py-5.mx-auto">
           <div class="row d-flex justify-content-center">
               <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
                   
@@ -99,7 +83,6 @@
                           <div class="row justify-content-between text-left">
                             <div class="form-group col-sm-6 flex-column d-flex">
                                  <label  class="form-control-label px-3">Tipo<span class="text-danger"> *</span></label>
-                                  <!-- <input list="x" type="text" id="tipo" name="tipo"  placeholder="Fixa ou Extra"> -->
                                 <select  id="tipo" name="tipo" style="height: 45px">
                                   
                                   <option value="1">Passeio</option>
@@ -139,13 +122,6 @@
                   </div>
                               </div>
                         
-
-                        <!-- <div class="row justify-content-between text-left">
-                            <div class="form-group col-sm-12 flex-column d-flex"> 
-                                <label class="form-control-label px-3">Quantia total<span class="text-danger"> *</span></label> 
-                                <input type="number" id="qtotal" name="categoria" placeholder="Quantia total"> 
-                            </div> -->
-                                 
                          
               </div>
           </div>
@@ -153,3 +129,37 @@
     
 </body>
 </html>
+
+
+
+
+
+
+<!-- 
+     <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"
+    />
+    
+    <script src="{{ url_for('static', filename='jquery-3.6.0.js') }}"></script>
+    <script src="{{ url_for('static', filename='teste.js') }}"></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="{{ url_for('static', filename='jquery-3.6.0.js') }}"></script>
+    <script src="{{ url_for('static', filename='jquery.mask.js') }}"></script>
+    <script src="{{ url_for('static', filename='teste.js') }}"></script>
+     -->
+     
+     
+     
+     
+     <!-- <div class="row justify-content-between text-left">
+                            <div class="form-group col-sm-12 flex-column d-flex"> 
+                                <label class="form-control-label px-3">Quantia total<span class="text-danger"> *</span></label> 
+                                <input type="number" id="qtotal" name="categoria" placeholder="Quantia total"> 
+                            </div> -->
+                                 
